Added few commands for bluetooth init, send and receive on comms.

--- a/apps/comms/Makefile
+++ b/apps/comms/Makefile
@@ -6,7 +6,7 @@ MMCULIB_DIR = ../../mmculib
 
 WRLIB_DIR = ../../wrlib
 
-DRIVERS = 
+DRIVERS = busart
 
 WR_DRIVERS = kernel
 
@@ -14,7 +14,7 @@ TARGET = comms.bin
 
 SRC = comms.c
 
-include ../../boards/camera/board.mk
+include ../../boards/comms/board.mk
 include $(WRLIB_DIR)/wrlib.mk
 include $(MMCULIB_DIR)/mmculib.mk
 
