Added python bluetooth serial script. Communicates using the bluetooth serial interface '/dev/cu.429testbt etc'. Press keys to send commands to the comms board.\n Implemented some framework in comms.c

--- a/apps/comms/Makefile
+++ b/apps/comms/Makefile
@@ -6,9 +6,11 @@ MMCULIB_DIR = ../../mmculib
 
 WRLIB_DIR = ../../wrlib
 
-DRIVERS = busart
+PERIPHERALS = 
 
-WR_DRIVERS = kernel
+DRIVERS = busart bbi2c usb_cdc pacer
+
+WR_DRIVERS = kernel usb_logging
 
 TARGET = comms.bin
 
@@ -17,5 +19,4 @@ SRC = comms.c
 include ../../boards/comms/board.mk
 include $(WRLIB_DIR)/wrlib.mk
 include $(MMCULIB_DIR)/mmculib.mk
-
 
