--- a/apps/i2cm_test2/Makefile
+++ b/apps/i2cm_test2/Makefile
@@ -4,13 +4,16 @@ OPT = -Os
 
 MMCULIB_DIR = ../../mmculib
 
+WRLIB_DIR = ../../wrlib
+
 DRIVERS = bbi2c pacer
 
 TARGET = i2cm_test2.bin
 
 SRC = i2cm_test2.c
 
-include ../../boards/sam7hxxx/board.mk
+include ../../boards/camera/board.mk
+include $(WRLIB_DIR)/wrlib.mk
 include $(MMCULIB_DIR)/mmculib.mk
 
 
